alignment corrections

--- a/styles/HeadSection.module.scss
+++ b/styles/HeadSection.module.scss
@@ -12,7 +12,7 @@ $hero-width: 400px;
   align-items: center;
   position: relative;
 
-  @media only screen and (max-width: theme.$screen-sm) {
+  @media only screen and (max-width: theme.$screen-md) {
     flex-direction: column;
     padding-top: 180px;
   }
