--- a/styles/Section.module.scss
+++ b/styles/Section.module.scss
@@ -3,7 +3,7 @@
 
 .section {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -29,7 +29,7 @@
   flex-direction: column;
   max-width: 360px;
   transform: scaleX(theme.$letter-width);
-  @media (max-width: theme.$screen-sm) {
+  @media (max-width: theme.$screen-md) {
     text-align: center;
   }
 }
